# Let

./: .gitignore  LICENSE  Pbm  README.md  install.sh  main.py  pyproject.toml  setup.py
let/: cli.py  config.py
let/ops/: info.py  search.py
let/repo/: fetch.py  index.py
let/utils/: print.py
letx/: __init__.py  cli.py  config.py
letx/ops/: info.py  search.py
letx/repo/: fetch.py  index.py
letx/utils/: print.py
template/: template
tests/: test_search.py
vdocs/: docs.md
vdocs/EN/: dev.md  user.md
vdocs/ID/: dev.md  user.md
xbps-template/: template
