[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "letx"
version     = "0.1.1"
description = "Let-X — VUR Helper untuk Void Linux"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27",   # HTTP client
    "rich>=13.0",    # Pretty output
]

[project.scripts]
letx = "letx.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["letx*"]
